[gd_scene load_steps=14 format=3 uid="uid://cp76wk0hhmwag"]

[ext_resource type="Script" uid="uid://b0l8bfxdvhkao" path="res://scripts/credits.gd" id="1_o3suw"]
[ext_resource type="PackedScene" uid="uid://k635iu86fy37" path="res://scene_objects/menu_background.tscn" id="2_pa7y0"]
[ext_resource type="PackedScene" uid="uid://bmuu7gov5nfwd" path="res://scene_objects/title_bar.tscn" id="3_nmdnh"]
[ext_resource type="StyleBox" uid="uid://67m76h2nyeyy" path="res://resources/main_menu_button_style.tres" id="4_3veic"]
[ext_resource type="FontFile" uid="uid://d2gom50m7yb65" path="res://assets/fonts/PixelifySans-VariableFont_wght.ttf" id="4_qbfqv"]
[ext_resource type="StyleBox" uid="uid://cscwrtv4vl12l" path="res://resources/main_menu_button_hover_style.tres" id="5_7nd3c"]
[ext_resource type="StyleBox" uid="uid://dtfd366g1j00" path="res://resources/main_menu_button_pressed_style.tres" id="6_3f04u"]
[ext_resource type="Texture2D" uid="uid://s6q5vi3fy8bn" path="res://assets/textures/itch_icon.webp" id="11_i1l18"]
[ext_resource type="Texture2D" uid="uid://d0jbr6bkhj2el" path="res://assets/textures/blusky_icon.webp" id="12_nmdnh"]
[ext_resource type="Texture2D" uid="uid://chsacipy1xum" path="res://assets/textures/web_icon.webp" id="12_uoica"]
[ext_resource type="PackedScene" uid="uid://oq5258by1a1k" path="res://scene_objects/menu_button.tscn" id="13_25eo3"]
[ext_resource type="Texture2D" uid="uid://baaghb4qxr6oj" path="res://assets/textures/github_icon.webp" id="13_725mu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hugtt"]
bg_color = Color(0, 0, 0, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.12549, 0.384314, 0.486275, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
expand_margin_left = 2.0
expand_margin_top = 2.0
expand_margin_right = 2.0
expand_margin_bottom = 2.0

[node name="credits" type="Node2D"]
texture_filter = 2
script = ExtResource("1_o3suw")

[node name="background" parent="." instance=ExtResource("2_pa7y0")]
anchors_preset = -1
offset_right = 1920.0
offset_bottom = 1080.0

[node name="menuContainer" type="VBoxContainer" parent="."]
texture_filter = 2
anchors_preset = -1
offset_right = 1920.0
offset_bottom = 1080.0
theme_override_constants/separation = 40

[node name="Title" parent="menuContainer" instance=ExtResource("3_nmdnh")]
layout_mode = 2
text = "Credits"

[node name="optionsContainer" type="HBoxContainer" parent="menuContainer"]
custom_minimum_size = Vector2(0, 600)
layout_mode = 2
size_flags_vertical = 2
theme_override_constants/separation = 40
alignment = 1

[node name="creditsText" type="RichTextLabel" parent="menuContainer/optionsContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(1100, 600)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_constants/line_separation = 25
theme_override_fonts/normal_font = ExtResource("4_qbfqv")
theme_override_fonts/bold_font = ExtResource("4_qbfqv")
theme_override_font_sizes/normal_font_size = 50
theme_override_font_sizes/bold_font_size = 60
bbcode_enabled = true
text = "[center][color=eaa56c]Design & programming:[/color]

Jaime Crespo \"jynus\"

[color=eaa56c]Made with Godot 4.5 in 4 days for the Game Jam[/color][/center]"

[node name="socialButtonContainer" type="VBoxContainer" parent="menuContainer/optionsContainer"]
clip_contents = true
custom_minimum_size = Vector2(200, 500)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 40

[node name="itchioButton" type="Button" parent="menuContainer/optionsContainer/socialButtonContainer"]
texture_filter = 2
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
tooltip_text = "Itch.io page"
focus_next = NodePath("../PlayButton")
focus_previous = NodePath("../CreditsButton")
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = ExtResource("4_3veic")
theme_override_styles/pressed = ExtResource("6_3f04u")
theme_override_styles/hover = ExtResource("5_7nd3c")
theme_override_styles/disabled = ExtResource("4_3veic")
theme_override_styles/focus = SubResource("StyleBoxFlat_hugtt")
icon = ExtResource("11_i1l18")
icon_alignment = 1
expand_icon = true

[node name="webButton" type="Button" parent="menuContainer/optionsContainer/socialButtonContainer"]
texture_filter = 2
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
tooltip_text = "Jynus.com Website"
focus_next = NodePath("../PlayButton")
focus_previous = NodePath("../CreditsButton")
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = ExtResource("4_3veic")
theme_override_styles/pressed = ExtResource("6_3f04u")
theme_override_styles/hover = ExtResource("5_7nd3c")
theme_override_styles/disabled = ExtResource("4_3veic")
theme_override_styles/focus = SubResource("StyleBoxFlat_hugtt")
icon = ExtResource("12_uoica")
icon_alignment = 1
expand_icon = true

[node name="blueskyButton" type="Button" parent="menuContainer/optionsContainer/socialButtonContainer"]
texture_filter = 2
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
tooltip_text = "Bluesky account"
focus_next = NodePath("../PlayButton")
focus_previous = NodePath("../CreditsButton")
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = ExtResource("4_3veic")
theme_override_styles/pressed = ExtResource("6_3f04u")
theme_override_styles/hover = ExtResource("5_7nd3c")
theme_override_styles/disabled = ExtResource("4_3veic")
theme_override_styles/focus = SubResource("StyleBoxFlat_hugtt")
icon = ExtResource("12_nmdnh")
icon_alignment = 1
expand_icon = true

[node name="githubButton" type="Button" parent="menuContainer/optionsContainer/socialButtonContainer"]
texture_filter = 2
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
tooltip_text = "GitHub.com source code"
focus_next = NodePath("../PlayButton")
focus_previous = NodePath("../CreditsButton")
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = ExtResource("4_3veic")
theme_override_styles/pressed = ExtResource("6_3f04u")
theme_override_styles/hover = ExtResource("5_7nd3c")
theme_override_styles/disabled = ExtResource("4_3veic")
theme_override_styles/focus = SubResource("StyleBoxFlat_hugtt")
icon = ExtResource("13_725mu")
icon_alignment = 1
expand_icon = true

[node name="doneButton" parent="menuContainer" instance=ExtResource("13_25eo3")]
unique_name_in_owner = true
custom_minimum_size = Vector2(700, 75)
layout_mode = 2
size_flags_vertical = 6
theme_override_font_sizes/font_size = 45

[connection signal="meta_clicked" from="menuContainer/optionsContainer/creditsText" to="." method="_on_credits_text_meta_clicked"]
[connection signal="pressed" from="menuContainer/optionsContainer/socialButtonContainer/itchioButton" to="." method="_on_itchio_button_pressed"]
[connection signal="pressed" from="menuContainer/optionsContainer/socialButtonContainer/webButton" to="." method="_on_web_button_pressed"]
[connection signal="pressed" from="menuContainer/optionsContainer/socialButtonContainer/blueskyButton" to="." method="_on_bluesky_button_pressed"]
[connection signal="pressed" from="menuContainer/optionsContainer/socialButtonContainer/githubButton" to="." method="_on_github_button_pressed"]
[connection signal="pressed" from="menuContainer/doneButton" to="." method="_on_done_button_pressed"]

[editable path="background"]
